--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav id="mainNav" role="navigation">
-            <img src="assets/menu-icon.png" alt="Menu" id="menuToggle" class="menu-icon">
+            <img src="" alt="Menu" id="menuToggle" class="menu-icon">
             <ul id="navLinks" role="navigation">
-                <li><a href="#carousel-container">Top</a></li>
+                <li><a href="#carousel-container">Carousel</a></li>
                 <li><a href="#competition">competition</a></li>
                 <li><a href="#comparison">comparison</a></li>
                 <li><a href="#application">application</a></li>
@@ -25,70 +25,42 @@
                 <div class="slide card">
                     <div class="card">
                         <figure>
-                            <img src="assets/arrietty.avif" alt="Arrietty Poster" class="poster">
+                            <img src="assets/b3.jpg" alt="Avata" class="poster">
                             <video class="trailer" autoplay loop muted controls>
-                                <source src="assets/arrietty-trailer.mp4" type="video/mp4">
+                                <source src="assets/Avata.mp4" type="video/mp4">
                             </video>
                         </figure>
                         <div class="caption">
-                            <h2>Arrietty</h2>
-                            <p>A tiny girl who lives in the walls of a house and interacts with a boy.</p>
+                            <h2>Dji Avata</h2>
+                            <p>Dji Avata through the machine came out, with extreme control of positioning let users praise, but it is difficult to get started.</p>
                         </div>
                     </div>
                 </div>
                 <div class="slide card">
                     <div class="card">
                         <figure>
-                            <img src="assets/howlscastle.jpg" alt="Howl's Moving Castle Poster" class="poster">
+                            <img src="assets/b2.png" alt="Dji Mavic 2" class="poster">
                             <video class="trailer" autoplay loop muted controls>
-                                <source src="assets/howl-trailer.mp4" type="video/mp4">
+                                <source src="assets/Mavic 2.mp4" type="video/mp4">
                             </video>
                         </figure>
                         <div class="caption">
-                            <h2>Howl's Moving Castle</h2>
-                            <p>A young woman is cursed with old age and finds refuge in a moving castle.</p>
+                            <h2>Dji Mavic 2</h2>
+                            <p>Its main selling point is the 1-inch Hasselt sensor, which is the first time DJI has introduced 1-inch cmos to the portable drone market.</p>
                         </div>
                     </div>
                 </div>
                 <div class="slide card">
                     <div class="card">
                         <figure>
-                            <img src="assets/kiki.webp" alt="Kiki's Delivery Service Poster" class="poster">
+                            <img src="assets/b1.jpg" alt="Dji Air 3" class="poster">
                             <video class="trailer" autoplay loop muted controls>
-                                <source src="assets/kiki-trailer.mp4" type="video/mp4">
+                                <source src="assets/Air3.mp4" type="video/mp4">
                             </video>
                         </figure>
                         <div class="caption">
-                            <h2>Kiki's Delivery Service</h2>
-                            <p>A young witch moves to a coastal city to start her training and delivers packages by broomstick.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide card">
-                    <div class="card">
-                        <figure>
-                            <img src="assets/spiritedaway.jpg" alt="Spirited Away Poster" class="poster">
-                            <video class="trailer" autoplay loop muted controls>
-                                <source src="assets/spirited-away-trailer.mp4" type="video/mp4">
-                            </video>
-                        </figure>
-                        <div class="caption">
-                            <h2>Spirited Away</h2>
-                            <p>A young girl enters a spirit world and must work to save her parents.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide card">
-                    <div class="card">
-                        <figure>
-                            <img src="assets/totoro.jpg" alt="My Neighbor Totoro Poster" class="poster">
-                            <video class="trailer" autoplay loop muted controls>
-                                <source src="assets/totoro-trailer.mp4" type="video/mp4">
-                            </video>
-                        </figure>
-                        <div class="caption">
-                            <h2>My Neighbor Totoro</h2>
-                            <p>Two sisters move to the countryside and befriend forest spirits.</p>
+                            <h2>Dji Air 3</h2>
+                            <p>The omnidirectional obstacle avoidance system uses APAS5.0 algorithm, and its binocular vision module generates a depth map through parallax calculation, and forms a stereoscopic perception field with the infrared TOF sensor. When the measured lateral flying over the forest, the detour trajectory planning is triggered 1.2 meters in advance.</p>
                         </div>
                     </div>
                 </div>
@@ -192,7 +164,6 @@
                 <h2>Successful registration!</h2>
                 <p>Thank you for your participation. We have received your registration information.</p>
                 <p>Details of the competition will be sent to your email, please check.</p>
-                <button @click="resetForm" class="confirm-btn">Confirm</button>
             </div>
         </section>
     </div>
