--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         </div>
     </section>
 
+    <section id="hero">
+        <div class="hero-content">
+            <h1>Welcome</h1>
+            <p>Registration for the international UAV competition has begun</p>
+        </div>
+    </section>
+
     <section id="competition">
         <div id="box">
             <div id="compA" onclick="showCompetition(1)">The FAI World Drone Racing Championship<br><br>Sponsored by the Chinese Society of Aeronautics, the competition aims to promote the innovation of aviation science and technology in colleges and universities through the competition, improve students 'independent innovation ability and engineering practice ability, and cultivate reserve talents for the aviation and defense industry.</div> 
